# bzip2-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  appveyor.yml  azure-pipelines.yml  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
bzip2/: all.html  enum.Action.html  enum.Error.html  enum.Status.html  index.html  struct.Compress.html  struct.Compression.html  struct.Decompress.html
bzip2-sys/: Cargo.toml  build.rs  bzlib.h  lib.rs  wasm_shim.rs
bzip2-sys/bzip2-1.0.7/: README.XML.STUFF  bzip2.1.preformatted  bzip2.txt  entities.xml  format.pl  manual.html  manual.ps  manual.xml  mk251.c  xmlproc.sh
bzip2-sys/examples/: it_work.rs
bzip2-sys/wasm_shim/: README.md  mod.rs  stdlib.h  string.h
bzip2/bufread/: struct.BzDecoder.html  struct.BzEncoder.html
bzip2/read/: index.html  struct.BzDecoder.html  struct.BzEncoder.html
bzip2/write/: struct.BzDecoder.html  struct.BzEncoder.html
bzip2_sys/: constant.BZ_CONFIG_ERROR.html  constant.BZ_DATA_ERROR.html  constant.BZ_DATA_ERROR_MAGIC.html  constant.BZ_FINISH.html  constant.BZ_FINISH_OK.html  constant.BZ_FLUSH.html  constant.BZ_FLUSH_OK.html  constant.BZ_IO_ERROR.html  constant.BZ_MEM_ERROR.html  constant.BZ_OK.html  constant.BZ_OUTBUFF_FULL.html  constant.BZ_PARAM_ERROR.html  constant.BZ_RUN.html  constant.BZ_RUN_OK.html  constant.BZ_SEQUENCE_ERROR.html  constant.BZ_STREAM_END.html  constant.BZ_UNEXPECTED_EOF.html  fn.BZ2_bzCompress.html  fn.BZ2_bzCompressEnd.html  fn.BZ2_bzCompressInit.html  fn.BZ2_bzDecompress.html  fn.BZ2_bzDecompressEnd.html  fn.BZ2_bzDecompressInit.html  fn.bz_internal_error.html  struct.bz_stream.html
ci/: azure-test-all.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/std/error/: trait.Error.js
implementors/std/io/: trait.Read.js  trait.Write.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
libbz2-sys/src/: lib.rs
src/: bufread.rs  lib.rs  mem.rs  raw.rs  read.rs  reader.rs  write.rs  writer.rs  wut.rs
src/bzip2/: bufread.rs.html  lib.rs.html  mem.rs.html  read.rs.html  write.rs.html
src/bzip2_sys/: lib.rs.html
tests/: tokio.rs
