[package]

name = "bzip2"
version = "0.3.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["bzip", "encoding"]
repository = "https://github.com/alexcrichton/bzip2-rs"
homepage = "https://github.com/alexcrichton/bzip2-rs"
documentation = "http://alexcrichton.com/bzip2-rs"
description = """
Bindings to libbzip2 for bzip2 compression and decompression exposed as
Reader/Writer streams.
"""
categories = ["compression", "api-bindings"]

[dependencies]
libc = "0.2"
bzip2-sys = { version = "0.1", path = "bzip2-sys" }

[dev-dependencies]
rand = "0.3"
quickcheck = "0.2"
