[package]

name = "bzip2-sys"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/bzip2-rs"
homepage = "https://github.com/alexcrichton/bzip2-rs"
documentation = "http://alexcrichton.com/bzip2-rs"
description = """
Bindings to libbzip2 for bzip2 compression and decompression exposed as
Reader/Writer streams.
"""

[lib]
name = "bzip2-sys"
path = "lib.rs"

[dependencies]
libc = "0.1"

[build-dependencies]
gcc = "0.1"
